[metadata]
name = airflow_providers_kobotoolbox
version = attr: kobo_provider.__version__
description = A KoboToolBox provider for Apache Airflow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/herver1971/kobo-provider
author = Fawzi El Gamal
author_email = fawzielgamal@icloud.com
license = Apache-2.0
license_file = LICENSE
classifiers = 
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls = 
	Bug Tracker = https://git.kan.com.ar/kan/airflow-providers/kobotoolbox-provider/-/issues

[options]
packages = find:
install_requires = 
	apache-airflow>=2.6.0
	unidecode==1.3.8
    geopandas==0.14.4
	geoalchemy2==0.15.1
python_requires = >=3.7

[options.entry_points]
apache_airflow_provider = 
	provider_info=kobo_provider.__init__:get_provider_info

[options.extras_require]
dev = 
	mypy==1.*
	pre-commit==2.15.0
	pydantic

[options.package_data]
kobo_provider.operators = style.sld

[mypy]
plugins = pydantic.mypy
disallow_untyped_defs = True
show_error_codes = True
files = kobo_provider/

[pydantic-mypy]
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "

[egg_info]
tag_build = 
tag_date = 0
